aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__dot_lookup.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
Binary:
  lhs:
    Binary:
      lhs:
        Ident:
          value: a
          location:
            start_byte: 0
            end_byte: 1
      rhs:
        Ident:
          value: b
          location:
            start_byte: 2
            end_byte: 3
      op: Dot
      location:
        start_byte: 0
        end_byte: 3
      original: a.b
  rhs:
    Ident:
      value: c
      location:
        start_byte: 4
        end_byte: 5
  op: Dot
  location:
    start_byte: 0
    end_byte: 5
  original: a.b.c
