aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__empty_map_entry.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
Map:
  items:
    - - Error:
          token:
            Operator: Colon
          location:
            start_byte: 1
            end_byte: 2
          original: ":"
      - Error:
          token:
            Operator: Colon
          location:
            start_byte: 1
            end_byte: 2
          original: ":"
  location:
    start_byte: 0
    end_byte: 2
  original: "{:"
