aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__expr_grouping_precedence.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 40
expression: parse(input)
---
Binary:
  original: (5 + 1) * 2
  lhs:
    Binary:
      original: 5 + 1
      lhs:
        Primitive:
          original: "5"
          value:
            Int: 5
          location:
            start_byte: 1
            end_byte: 2
      rhs:
        Primitive:
          original: "1"
          value:
            Int: 1
          location:
            start_byte: 5
            end_byte: 6
      op: Plus
      location:
        start_byte: 1
        end_byte: 6
  rhs:
    Primitive:
      original: "2"
      value:
        Int: 2
      location:
        start_byte: 10
        end_byte: 11
  op: Mul
  location:
    start_byte: 0
    end_byte: 11
