aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__function_no_args.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 52
expression: parse(input)
---
Call:
  original: f()
  fun:
    Ident:
      value: f
      location:
        start_byte: 0
        end_byte: 1
  args: []
  location:
    start_byte: 0
    end_byte: 3
