aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__incomplete_dot_lookup.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
Binary:
  lhs:
    Ident:
      value: obj
      location:
        start_byte: 0
        end_byte: 3
  rhs:
    Error:
      token: Eof
      location:
        start_byte: 3
        end_byte: 4
      original: "."
  op: Dot
  location:
    start_byte: 0
    end_byte: 4
  original: obj.
