aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__invalid_either.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 211
expression: parse(input)
---
Binary:
  original: "a ? "
  lhs:
    Ident:
      value: a
      location:
        start_byte: 0
        end_byte: 1
  rhs:
    Error:
      original: " "
      location:
        start_byte: 3
        end_byte: 4
      token: Eof
  op: Either
  location:
    start_byte: 0
    end_byte: 4
